force-app/main/default/objects/BGH__c/BGH__c.object-meta.xml
<CustomObject>
    <label>BGH</label>
    <nameField>
        <displayFormat>BGH-{0000}</displayFormat>
        <label>BGH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BGH&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>