force-app/main/default/objects/BGH__c/fields/BGH_Account__c.field-meta.xml
<CustomField>
    <fullName>BGH_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BGH Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Accounts</relationshipLabel>
    <relationshipName>BGH_s</relationshipName>
    <type>Lookup</type>
</CustomField>