force-app/main/default/objects/BGH__c/fields/BGH_Unique_Value__c.field-meta.xml
<CustomField>
    <fullName>BGH_Unique_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BGH Unique Value</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>