force-app/main/default/objects/BGH__c/fields/New_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Account__c</fullName>
    <label>New Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BGH&apos;s</relationshipLabel>
    <relationshipName>BGH_s1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>