force-app/main/default/objects/BGH__c/fields/NewAccountOwnerName__c.field-meta.xml
<CustomField>
    <fullName>NewAccountOwnerName__c</fullName>
    <formula>New_Account__r.Owner.FirstName &amp; &quot; &quot; &amp; New_Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Company Owner Name</label>
    <type>Text</type>
</CustomField>