force-app/main/default/objects/BGH__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>We have created this field on (13/Sep/2017), to categorized the Account and Contact BGH records separately, as discussed with shruthi, Mida</description>
    <inlineHelpText>To Categorized Account and Contact BGH records</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account BGH</fullName>
            </value>
            <value>
                <fullName>Contact BGH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>