force-app/main/default/objects/BGH__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/30/2026 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>