force-app/main/default/objects/BGH__c/listViews/Debbie_List.listView-meta.xml
<ListView>
    <fullName>Debbie_List</fullName>
    <columns>NAME</columns>
    <columns>BGH_Account__c</columns>
    <columns>CASESAFEID__c</columns>
    <columns>New_Account__c</columns>
    <columns>NewAccountOwnerName__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>New_Account__c</field>
        <operation>equals</operation>
        <value>&quot;AAA Auto Club South, Inc.&quot;</value>
    </filters>
    <label>Debbie&apos;s List</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>