force-app/main/default/objects/BGH__c/listViews/Michele_Test.listView-meta.xml
<ListView>
    <fullName>Michele_Test</fullName>
    <columns>NAME</columns>
    <columns>BGH_Account__c</columns>
    <columns>CASESAFEID__c</columns>
    <columns>New_Account__c</columns>
    <columns>NewAccountOwnerName__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BGH_Account__c</field>
        <operation>contains</operation>
        <value>Health Transformation Alliance</value>
    </filters>
    <label>Michele Test</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>